--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 -->
 <head>
 <meta charset="utf-8">
-    <title>Index</title>
+    <title>Mustang Index</title>
 </head>
 <body>
     This site is intended to host the Mustang index JSON file:
